Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

05-Aug-2010 Jean-Marie Simonet
 # [#21599] Featured articles - article link to parent category - 500 error. Thanks Mathavan

04-Aug-2010 Jean-Marie Simonet
 [#21662] Single contact view not treating category access issue correctly. Thanks Elin.
 
04-Aug-2010 Andrew Eddie
 # Fixed issue [#21536] admin/com_users: report view. Is this being used or worked on?
 # Fixed issue [#20899] Changing 'Home' to a 'External Link' or 'Menu Item Alias' causes '404 Component Not Found' error on homepage (Zach Garner, Tim Plummer, Christophe, Michael Babker).
 # Fixed issue [#21711] Global Configuration button in Control Panel (Sander Potjer, Michael Babker).
 # Fixed issue [#21318] Caching causes problems with admin parameters (Elin Waring, Klas Berlič1).

03-Aug-2010 Jean-Marie Simonet
 $ Adding missing strings, deleting redundant ones for com_contact.
 $ Adding/normalizing some .sys.ini strings/values com_user, com_weblinks
 # [#21706] Modifying [#21159] to let cat have the same name/alias when not in same tree when save&copy
 #$ [#21712] Weblinks /menu-items params correction. Thanks Bill.
 # [#21694] Beez Templates xml files reference to language folder
 
03-Aug-2010 Andrew Eddie
 # Fixed issue [#21346] Error in loading order of JS scripts in components (g p).
 # Fixed issue [#21704] *Re-enabling Published state per default when creating new items (Jean-Marie Simonet).

02-Aug-2010 Andrew Eddie
 # Fixed issue [#21545] </optgroup> is not generated for menu items admin page (Franklin Tse, Omar Ramos).
 # Fixed issue [#21670] Implementing the ability to NOT translate label and description (Jean-Marie Simonet, Artyom Bisyarin).

01-Aug-2010 Ron Severdia
^ [# 21368] Changed alignment of column items