@@ -29,6 +29,7 @@ $ -> Language fix or change
 
 05-Aug-2010 Jean-Marie Simonet
  # [#21599] Featured articles - article link to parent category - 500 error. Thanks Mathavan
+ # [#21433] Title disappear when you select the menu item type. Thanks Bill
 
 04-Aug-2010 Jean-Marie Simonet
  [#21662] Single contact view not treating category access issue correctly. Thanks Elin.
